fix: overflowing root

--- a/client/source/styles/base.css
+++ b/client/source/styles/base.css
@@ -20,6 +20,7 @@ ul {
 }
 
 :root {
+  position: fixed;
   overflow: hidden;
   width: 100dvw;
   height: 100dvh;
@@ -41,6 +42,7 @@ body {
 }
 
 body {
+  overflow: hidden;
   width: 100%;
   max-width: var(--max-screen-width);
   height: 100%;
